--- a/app/src/main/res/layout/recipe_card.xml
+++ b/app/src/main/res/layout/recipe_card.xml
@@ -9,66 +9,83 @@
         android:id="@+id/cardView"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="210dp"
         android:layout_margin="10dp"
-        card_view:cardCornerRadius="15dp"
+        card_view:cardCornerRadius="10dp"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         android:clickable="true"
         android:focusable="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/recipeImg"
+            <FrameLayout
+                android:id="@+id/imageFrame"
                 android:layout_width="match_parent"
-                android:layout_height="236dp"
-                android:cropToPadding="true"
-                android:layout_gravity="center"
-                android:scaleType="centerCrop">
+                android:layout_height="match_parent">
 
-            </ImageView>
-
-            <LinearLayout
-                android:layout_marginTop="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <TextView
-                    android:id="@+id/recipeTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:textSize="20sp"
-                    android:text="Card"
-                    android:layout_gravity="center_vertical"
+                <ImageView
+                    android:id="@+id/recipeImg"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:cropToPadding="true"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
                     />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageButton
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/ic_favorite_border_36"
-                    android:layout_gravity="end"
-                    >
-
-                </ImageButton>
-
-            </LinearLayout>
+                
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/recipe_gradient"/>
+                
+            </FrameLayout>
 
 
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/recipeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#FFFFFF"
+                android:text="Recipe Title"
+                android:layout_alignBottom="@id/imageFrame"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="15dp"
+                />
+
+
+        </RelativeLayout>
+
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/recipeImg"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="236dp"-->
+<!--                android:cropToPadding="true"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:scaleType="centerCrop">-->
+
+<!--            </ImageView>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/recipeTitle"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:textSize="20sp"-->
+<!--                android:text="Recipe Title"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                />-->
+<!--        </LinearLayout>-->
 
     </androidx.cardview.widget.CardView>
 
