--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 
 <resources>
     <color name="seed">#B1DCF0</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="md_theme_light_primary">#006782</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#BBE9FF</color>
