--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -2,8 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="#D5D5D5"
+    app:cardBackgroundColor="@color/md_theme_light_tertiaryContainer"
     app:cardCornerRadius="15dp"
+    android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -16,36 +17,56 @@
 
         <TextView
             android:id="@+id/ingredientNameText"
-            android:layout_width="140dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_default"
-            android:text="ingredient"/>
+            android:layout_weight="1"
+            android:textColor="@color/md_theme_light_onTertiaryContainer"
+            android:text="@string/ingredient"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
         <TextView
             android:id="@+id/ingredientQuantityText"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_default"
-            android:text="quantity"/>
+            android:layout_weight="1"
+            android:textColor="@color/md_theme_light_onTertiaryContainer"
+            android:text="Qty"/>
 
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
         <TextView
             android:id="@+id/ingredientQuantityTypeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/md_theme_light_onTertiaryContainer"
             android:textSize="@dimen/text_default"
-            android:text="type"/>
+            android:text="Type"/>
 
         <Space
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            />
 
         <ImageView
             android:id="@+id/ingredientDeleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_delete_24"/>
+            android:layout_weight="1"
+            app:tint="@color/md_theme_light_onTertiaryContainer"
+            android:src="@drawable/outline_delete_24"/>
 
 
     </LinearLayout>
